--- a/transactions_processing/savings_processing_example.ipynb
+++ b/transactions_processing/savings_processing_example.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "# Raw input file extracted bank website\n",
     "input_csv = r\"C:\\Users\\weism\\OneDrive\\life stuff\\Personal Projects\\Personal Finance Database\\bank data\\saving_transactions_may2023.CSV\"\n",
-    "pd.read_csv(input_csv, encoding='unicode_escape', index_col=None)"
+    "pd.read_csv(input_csv, encoding='unicode_escape', index_col=False)"
    ]
   },
   {
