--- a/transactions_processing/savings_processing_example.ipynb
+++ b/transactions_processing/savings_processing_example.ipynb
@@ -14,7 +14,7 @@
     "to a random number and any sensitive material (such as bank account numbers) have been removed. However,\n",
     "this data still closely resembles real transactions.\n",
     "\n",
-    "This example will show the input transactions CSV file, the output DataFrames generated via the \"savings_file_cleanup\" function, and how the data is loaded into the database using the \"to_spend_save\" function. To see the details of the functions, view [transactions_cleanining_functions](transactions_cleaning_functions.py)\n",
+    "This example will show the input transactions CSV file, the output DataFrames generated via the \"savings_file_cleanup\" function, and how the data is loaded into the database using the \"to_spend_save\" function. To see the details of the functions, view [transactions_processing_functions](transactions_processing/transactions_processing_functions)\n",
     "and navigate to the desired function."
    ]
   },
