--- a/database_views/views.ipynb
+++ b/database_views/views.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Database Views\n",
     "\n",
-    "Below are the views created for the spend_save database. These views function as \"reports\" of sort, allow me to easily access summaries of my spending habits and account balances. I opted to use Jupyter Lab and the sql magic command to demonstrate the creation of each view and the output. If you would like to view or run the SQL script used to create the views, see [link]."
+    "Below are the views created for the spend_save database. These views function as \"reports\" of sort, allow me to easily access summaries of my spending habits and account balances. I opted to use Jupyter Lab and the sql magic command to demonstrate the creation of each view and the output. If you would like to view or run the SQL script used to create the views, see the [views creation script](views_creation_script.sql)."
    ]
   },
   {
