--- a/database_views/views_overview.ipynb
+++ b/database_views/views_overview.ipynb
@@ -137,35 +137,35 @@
     "%%sql\n",
     "\n",
     "CREATE VIEW monthly_spend_summary AS\n",
-    "# CTE to perform initial aggregation\n",
+    "-- CTE to perform initial aggregation\n",
     "WITH cte AS (\n",
     "    SELECT\n",
     "        d.month_number,\n",
     "        d.month_name AS month,\n",
     "        d.year,\n",
-    "        # Take absolute value since transaction_amount is negative for purchases\n",
+    "        -- Take absolute value since transaction_amount is negative for purchases\n",
     "        SUM(ABS(tf.transaction_amount)) AS month_amount_spent\n",
     "    FROM transaction_facts AS tf\n",
     "    JOIN transaction_type AS t \n",
     "        USING (transaction_type_id)\n",
-    "    # Inner join with category filters out all transactions that are not purchases\n",
+    "    -- Inner join with category filters out all transactions that are not purchases\n",
     "    JOIN category AS c\n",
     "        USING (category_id)\n",
     "    JOIN date AS d \n",
     "        USING (short_date)\n",
-    "    # Not interested in 2022\n",
+    "    -- Not interested in 2022\n",
     "    WHERE d.year != '2022'\n",
     "    GROUP BY month, d.month_number, d.year\n",
     "    ORDER BY d.year, d.month_number\n",
     ")\n",
     "SELECT\n",
     "    *,\n",
-    "    # Calculate dollar increase from prior month as decimal\n",
+    "    -- Calculate dollar increase from prior month as decimal\n",
     "    ROUND((month_amount_spent - LAG(month_amount_spent)\n",
     "                                    OVER (ORDER BY year, month_number))\n",
     "        / LAG(month_amount_spent) OVER (ORDER BY year, month_number),\n",
     "          2) AS prior_month_change,\n",
-    "    # Calculate yearly running total spent\n",
+    "    -- Calculate yearly running total spent\n",
     "    SUM(month_amount_spent)\n",
     "        OVER (\n",
     "            PARTITION BY year\n",
@@ -273,7 +273,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "# Output\n",
+    "-- Output\n",
     "SELECT *\n",
     "FROM monthly_spend_summary"
    ]
@@ -328,16 +328,16 @@
     "    d.month_number,\n",
     "    d.month_name,\n",
     "    c.category_description,\n",
-    "    # Take absolute value since transaction_amount is negative for purchases\n",
+    "    -- Take absolute value since transaction_amount is negative for purchases\n",
     "    SUM(ABS(tf.transaction_amount)) AS monthly_spend,\n",
-    "    # Rank spending per category by month and year\n",
+    "    -- Rank spending per category by month and year\n",
     "    RANK()\n",
     "        OVER(\n",
     "        PARTITION BY month_number, month_name, year \n",
     "            ORDER BY ABS(SUM(tf.transaction_amount)) DESC\n",
     "        ) AS month_ranking\n",
     "FROM transaction_facts AS tf\n",
-    "# Inner join with category filters out all non-purchase transactions\n",
+    "-- Inner join with category filters out all non-purchase transactions\n",
     "JOIN category AS c\n",
     "    USING (category_id)\n",
     "JOIN account AS a \n",
@@ -346,7 +346,7 @@
     "    USING (transaction_type_id)\n",
     "JOIN date AS d \n",
     "    USING (short_date)\n",
-    "# Not interested in 2022\n",
+    "-- Not interested in 2022\n",
     "WHERE d.year != '2022'\n",
     "GROUP BY month_number, month_name, year, category_description\n",
     "ORDER BY year, month_number, month_ranking;"
@@ -670,7 +670,7 @@
     "# Output\n",
     "SELECT *\n",
     "FROM monthly_spend_category\n",
-    "WHERE month_number < 3        # Limit output to first 2 months due to large amount of data"
+    "WHERE month_number < 3        -- Limit output to first 2 months due to large amount of data"
    ]
   },
   {
@@ -719,11 +719,11 @@
     "\n",
     "CREATE VIEW monthly_account_balances AS\n",
     "SELECT\n",
-    "    # Combine month and year to get date period\n",
+    "    -- Combine month and year to get date period\n",
     "    CONCAT(year, '-' , LPAD(month_number, 2, '0')) AS end_date_period,\n",
     "    tf.account_id,\n",
     "    account_type,\n",
-    "    # Running total represents account balances\n",
+    "    -- Running total represents account balances\n",
     "    SUM(SUM(transaction_amount))\n",
     "    OVER(\n",
     "    PARTITION BY tf.account_id \n",
@@ -932,7 +932,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "# Output\n",
+    "-- Output\n",
     "SELECT *\n",
     "FROM monthly_account_balances"
    ]
@@ -984,18 +984,18 @@
     "    t.transaction_type_description,\n",
     "    c.category_description,\n",
     "    tf.transaction_description,\n",
-    "    # Take absolute value since transaction_amount is negative for purchases. Assign 0 for days with no purchases.\n",
+    "    -- Take absolute value since transaction_amount is negative for purchases. Assign 0 for days with no purchases.\n",
     "    COALESCE(ABS(tf.transaction_amount), 0) AS transaction_total,\n",
     "    d.year,\n",
-    "    # Sum total spent by year up to the current date\n",
+    "    -- Sum total spent by year up to the current date\n",
     "    SUM(ABS(tf.transaction_amount))\n",
     "        OVER(\n",
     "            PARTITION BY d.year \n",
     "            ORDER BY short_date, transaction_id\n",
     "        ) AS running_yearly_spend\n",
-    "# Select from date column to keep all dates, not just ones with purchases\n",
+    "-- Select from date column to keep all dates, not just ones with purchases\n",
     "FROM date AS d\n",
-    "# Use left join to keep dates mentioned above. Also need to filter out non-purchases since left join was used\n",
+    "-- Use left join to keep dates mentioned above. Also need to filter out non-purchases since left join was used\n",
     "LEFT JOIN transaction_facts AS tf\n",
     "    ON d.short_date = tf.short_date\n",
     "    AND tf.transaction_type_id IN (1,2)\n",
@@ -1004,7 +1004,7 @@
     "LEFT JOIN category AS c \n",
     "    USING (category_id)\n",
     "WHERE d.short_date <= CURDATE()\n",
-    "    # Not interested in 2022\n",
+    "    -- Not interested in 2022\n",
     "    AND year != '2022'\n",
     "ORDER BY short_date;"
    ]
@@ -2057,10 +2057,10 @@
    "source": [
     "%%sql\n",
     "\n",
-    "# Output\n",
+    "-- Output\n",
     "SELECT *\n",
     "FROM daily_spend\n",
-    "WHERE (transaction_id BETWEEN 446 AND 563)        # Showing only fabricated transactions to preserve pricacy"
+    "WHERE (transaction_id BETWEEN 446 AND 563)        -- Showing only fabricated transactions to preserve pricacy"
    ]
   },
   {
@@ -2108,7 +2108,7 @@
     "%%sql\n",
     "\n",
     "CREATE VIEW daily_category_balance AS\n",
-    "# CTE to generate all possible days and categories\n",
+    "-- CTE to generate all possible days and categories\n",
     "WITH date_category AS (\n",
     "    SELECT \n",
     "        d.short_date,\n",
@@ -2125,13 +2125,13 @@
     "SELECT \n",
     "\tdc.short_date,\n",
     "    dc.category_id,\n",
-    "    # Generate running total. Assign 0 for days with no purchases.\n",
+    "    -- Generate running total. Assign 0 for days with no purchases.\n",
     "    SUM(COALESCE(SUM(ABS(tf.transaction_amount)), 0))\n",
     "        OVER(\n",
     "            PARTITION BY dc.category_id \n",
     "            ORDER BY dc.short_date \n",
     "        ) AS cumulative_sum\n",
-    "# Select from cte and left join other tables to keep all dates and categories from cte\n",
+    "-- Select from cte and left join other tables to keep all dates and categories from cte\n",
     "FROM date_category AS dc\n",
     "LEFT JOIN transaction_facts AS tf\n",
     "    ON dc.short_date = tf.short_date\n",
@@ -3087,10 +3087,10 @@
    "source": [
     "%%sql\n",
     "\n",
-    "# Output\n",
+    "-- Output\n",
     "SELECT *\n",
     "FROM daily_category_balance\n",
-    "LIMIT 150        # Limit output due to size of view table"
+    "LIMIT 150        -- Limit output due to size of view table"
    ]
   }
  ],
