--- a/database_views/views_overview.ipynb
+++ b/database_views/views_overview.ipynb
@@ -680,7 +680,7 @@
    "source": [
     "### monthly_account_balances\n",
     "\n",
-    "Shows the balance of checking account, savings account, and credit card at end of every month."
+    "Shows the balance of checking account, savings account, and credit card at end of every month (Note: Balances have been falsified)."
    ]
   },
   {
