--- a/database_views/views_overview.ipynb
+++ b/database_views/views_overview.ipynb
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "# Connect to spend_save database using pymysql(Note: Password has been hidden after running code)\n",
+    "# Connect to spend_save database using pymysql(note: password has been hidden after running code)\n",
     "%sql mysql+pymysql://root:****@localhost/spend_save"
    ]
   },
@@ -680,7 +680,7 @@
    "source": [
     "### monthly_account_balances\n",
     "\n",
-    "Shows the balance of checking account, savings account, and credit card at end of every month (Note: Balances have been falsified)."
+    "Shows the balance of checking account, savings account, and credit card at end of every month (note: balances have been falsified)."
    ]
   },
   {
