--- a/transactions_processing/savings_processing_example.ipynb
+++ b/transactions_processing/savings_processing_example.ipynb
@@ -371,7 +371,7 @@
    ],
    "source": [
     "# Load data into spend_save\n",
-    "to_spend_save(savings_df, \"***\", \"password\")"
+    "to_spend_save(savings_df, \"savings\", \"***\")"
    ]
   },
   {
