--- a/transactions_processing/cc_processing_example.ipynb
+++ b/transactions_processing/cc_processing_example.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# Import function and needed packages\n",
-    "import pandas as pd\n",
+    "import pandas as %pd\n",
     "from transactions_processing_functions import cc_file_cleanup, to_spend_save"
    ]
   },
@@ -468,12 +468,19 @@
   {
    "cell_type": "markdown",
    "id": "03280950-d598-4ead-87e7-d171b1e1d7cb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Processing\n",
-    "Processing the input CSV file using cc_file_cleanup. This function processes transactions by reading the category of the transactions assigned by the bank and returns the \"category_id\", which is needed to be loaded into the database. Transactions that are able to be automatically processed are loaded into a Dataframe called \"cc_df\" and other transactions needing manual review are loaded into \"cc_review_df\". See the full function docstring below\"\n",
-    "\n",
-    "```\n",
+    "Processing the input CSV file using cc_file_cleanup. This function processes transactions by reading the category of the transactions assigned by the bank and returns the \"category_id\", which is needed to be loaded into the database. Transactions that are able to be automatically processed are loaded into a Dataframe called \"cc_df\" and other transactions needing manual review are loaded into \"cc_review_df\". See the full function docstring below:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "ea1ee4ac-65e5-4be9-a8ff-6cf1193bf963",
+   "metadata": {},
+   "source": [
     "Cleans up a credit card transactions, performs data transformations, and returns the cleaned dataframes.\n",
     "\n",
     "Args:\n",
@@ -485,8 +492,17 @@
     "    tuple: A tuple containing two pandas DataFrames:\n",
     "        - cc_df: The cleaned and transformed credit card transactions DataFrame.\n",
     "        - cc_review_df: The DataFrame containing transactions that need manual review for assignment of\n",
-    "                        transaction_type_id and category_id.\n",
-    "```"
+    "                        transaction_type_id and category_id."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acc19a06-1f93-4b3e-b926-0f18e6ad1fd6",
+   "metadata": {},
+   "source": [
+    "## Output\n",
+    "See the output of \"cc_review_df\" and \"cc_df\" below. Since all transactions were able to be processed by the function,\n",
+    "\"cc_review_df\" in empty. These transactions would be manually assigned a transaction_type_id and category_id (if necessary), then appended back to the \"cc_df\". Note that some results have a null category_id since they are credit card bill payments, not true purchases"
    ]
   },
   {
@@ -1001,7 +1017,7 @@
    "id": "9d581b90-62a6-46aa-abfa-54b8398fc2bb",
    "metadata": {},
    "source": [
-    "### Loading Data into Database"
+    "## Loading Data into Database"
    ]
   },
   {
@@ -1072,6 +1088,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "369px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
