--- a/database_views/views_overview.ipynb
+++ b/database_views/views_overview.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Database Views\n",
     "\n",
-    "Presented below are the views crafted for the spend_save database. These views serve as informative \"reports,\" providing convenient access and analysis of summarized data pertaining to my spending patterns and account balances. To showcase the creation process and the respective outputs of each view, I opted to utilize Jupyter Lab along with the sql magic command. If you are interested in examining or executing the SQL script employed to establish these views, please refer to the [views creation script](views_creation_script.sql).\n",
+    "Presented below are the views crafted for the spend_save database. These views serve as informative \"reports,\" providing convenient access and analysis of summarized data pertaining to my spending patterns and account balances. To showcase the creation process and the respective outputs of each view, I opted to utilize Jupyter Notebooks along with the sql magic command. If you are interested in examining or executing the SQL script employed to establish these views, please refer to the [views creation script](views_creation_script.sql).\n",
     "\n",
     "Please note that the results produced by the queries presented below do not reflect my personal financial information. Before executing these queries, fictitious transactions were deliberately introduced into the database to safeguard privacy."
    ]
@@ -19,7 +19,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "In order to execute the SQL code within Jupyter Lab, a few setup steps are necessary. Firstly, we need to install and load the SQL IPython module, enabling the execution of SQL code. Additionally, we need to establish a connection to the database. It is worth noting that the \"%\" symbol is utilized to indicate a single line of a Jupyter magic command, while \"%%\" designates the entire cell as a magic command."
+    "In order to execute the SQL code within Jupyter Notebooks, a few setup steps are necessary. Firstly, we need to install and load the SQL IPython module, enabling the execution of SQL code. Additionally, we need to establish a connection to the database. It is worth noting that the \"%\" symbol is utilized to indicate a single line of a Jupyter magic command, while \"%%\" designates the entire cell as a magic command."
    ]
   },
   {
