Fix import statement for pandas in notebook

--- a/transactions_processing/cc_processing_example.ipynb
+++ b/transactions_processing/cc_processing_example.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# Import function and needed packages\n",
-    "import pandas as %pd\n",
+    "import pandas as pd\n",
     "from transactions_processing_functions import cc_file_cleanup, to_spend_save"
    ]
   },
